--- a/Report/TEX Files/bibliography.bib
+++ b/Report/TEX Files/bibliography.bib
@@ -1,7 +1,15 @@
-@MISC{W1,
-HOWPUBLISHED = "\url{https://www.analyticsvidhya.com/blog/2019/08/11-important-model-evaluation-error-metrics/}",
-AUTHOR = "TAVISH SRIVASTAVA",
-TITLE = "Analytics Vidhya",
-MONTH = "Aug",
-YEAR = "2019"
+@MISC{1,
+HOWPUBLISHED = "\url{http://www.open311.org/}",
+AUTHOR = "OPEN311 Community",
+TITLE = "Open311"
+}
+@MISC{2,
+HOWPUBLISHED = "\url{http://people.ischool.berkeley.edu/~samuel.goodgame/311/}",
+AUTHOR = "Sam Goodgame, David Harding, Romulo Manzano",
+TITLE = "Analysing NYC 311 Requests"
+}
+@MISC{3,
+HOWPUBLISHED = "\url{https://dl.acm.org/doi/abs/10.1145/3325112.3325212}",
+AUTHOR = "Loni Hagen, Hye Seon Yi,  Siana Pietri,  Thomas E Keller",
+TITLE = "Processes, Potential Benefits, and Limitations of Big Data Analytics: A Case Analysis of 311 Data from City of Miami"
 }
