Added prediction for number of calls

--- a/Supervised Learning_1.ipynb
+++ b/Supervised Learning_1.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -365,13 +365,391 @@
        " Row(Complaint_Type='HEAT/HOT WATER', Complaint_Type_Vector=0.0)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "indexed.select('Complaint_Type','Complaint_Type_Vector').head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Unique_Key',\n",
+       " 'Closing_timestamp',\n",
+       " 'Creation_timestamp',\n",
+       " 'time_to_resolve_in_hrs',\n",
+       " 'Agency',\n",
+       " 'Agency_Name',\n",
+       " 'Open_Data_Channel_Type',\n",
+       " 'Status',\n",
+       " 'Complaint_Type',\n",
+       " 'Borough',\n",
+       " 'Creation_Month',\n",
+       " 'Creation_Day',\n",
+       " 'Creation_Hour',\n",
+       " 'Closing_Month',\n",
+       " 'Closing_Day',\n",
+       " 'Closing_Hour',\n",
+       " 'Issue_Category',\n",
+       " 'Incident_Zip',\n",
+       " 'City',\n",
+       " 'Latitude',\n",
+       " 'Longitude',\n",
+       " 'Created_Date',\n",
+       " 'Creation_Time',\n",
+       " 'Closed_Date',\n",
+       " 'Closing_Time',\n",
+       " 'Complaint_Type_Vector']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indexed.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+---------------------+\n",
+      "|      Complaint_Type|Complaint_Type_Vector|\n",
+      "+--------------------+---------------------+\n",
+      "|  Noise - Commercial|                 11.0|\n",
+      "|          WATER LEAK|                 12.0|\n",
+      "| Noise - Residential|                  1.0|\n",
+      "|        Water System|                  8.0|\n",
+      "|       PAINT/PLASTER|                 10.0|\n",
+      "|            PLUMBING|                  9.0|\n",
+      "|      HEAT/HOT WATER|                  0.0|\n",
+      "|UNSANITARY CONDITION|                  6.0|\n",
+      "|               Noise|                  7.0|\n",
+      "|Noise - Street/Si...|                  5.0|\n",
+      "|Request Large Bul...|                  4.0|\n",
+      "|     Illegal Parking|                  2.0|\n",
+      "|    Blocked Driveway|                  3.0|\n",
+      "+--------------------+---------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "indexed.select('Complaint_Type', 'Complaint_Type_Vector').distinct().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_calls_df = indexed.groupBy('Complaint_Type_Vector', 'Creation_Day','Creation_Hour').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Complaint_Type_Vector', 'Creation_Day', 'Creation_Hour', 'count']"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_calls_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.linalg import Vectors\n",
+    "from pyspark.ml.feature import VectorAssembler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assembler = VectorAssembler(\n",
+    "  inputCols=['Complaint_Type_Vector', 'Creation_Day','Creation_Hour'],\n",
+    "    outputCol=\"features\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = assembler.transform(num_calls_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+-----+\n",
+      "|        features|count|\n",
+      "+----------------+-----+\n",
+      "| [10.0,2.0,12.0]|  117|\n",
+      "|  [12.0,3.0,4.0]|    5|\n",
+      "| [10.0,3.0,12.0]|  102|\n",
+      "| [10.0,3.0,17.0]|   50|\n",
+      "|   [9.0,4.0,2.0]|    5|\n",
+      "|   [9.0,4.0,5.0]|    9|\n",
+      "| [10.0,4.0,14.0]|  114|\n",
+      "|  [10.0,5.0,9.0]|   87|\n",
+      "| [12.0,7.0,18.0]|   33|\n",
+      "|   [9.0,9.0,7.0]|   21|\n",
+      "|[12.0,10.0,11.0]|   65|\n",
+      "| [9.0,10.0,14.0]|   80|\n",
+      "|[12.0,13.0,14.0]|   50|\n",
+      "| [4.0,14.0,19.0]|  189|\n",
+      "| [4.0,15.0,12.0]|  225|\n",
+      "| [9.0,19.0,15.0]|   73|\n",
+      "| [0.0,19.0,21.0]|  416|\n",
+      "| [8.0,22.0,20.0]|   66|\n",
+      "|  [8.0,25.0,2.0]|   16|\n",
+      "| [12.0,25.0,7.0]|   15|\n",
+      "+----------------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "output.select(\"features\", \"count\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_data = output.select(\"features\", \"count\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data,test_data = final_data.randomSplit([0.7,0.3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.regression import LinearRegression\n",
+    "# Create a Linear Regression Model object\n",
+    "lr = LinearRegression(labelCol='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit the model to the data and call this model lrModel\n",
+    "lrModel = lr.fit(train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients: [-20.77539241728782,-0.5833390435406884,6.683113952020992] Intercept: 175.28314171493946\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the coefficients and intercept for linear regression\n",
+    "print(\"Coefficients: {} Intercept: {}\".format(lrModel.coefficients,lrModel.intercept))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_results = lrModel.evaluate(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 87.59594750550254\n",
+      "MSE: 7673.050019386756\n",
+      "R2: 0.4751228911854294\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"RMSE: {}\".format(test_results.rootMeanSquaredError))\n",
+    "print(\"MSE: {}\".format(test_results.meanSquaredError))\n",
+    "print(\"R2: {}\".format(test_results.r2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = lrModel.transform(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+-----+-------------------+\n",
+      "|       features|count|         prediction|\n",
+      "+---------------+-----+-------------------+\n",
+      "|[1.0,18.0,22.0]|  827|  291.0361534583811|\n",
+      "|[1.0,26.0,10.0]|   58| 206.17207368580367|\n",
+      "|[2.0,15.0,15.0]|  290|  225.2289805075684|\n",
+      "| [5.0,4.0,19.0]|  178| 196.05198854273647|\n",
+      "| [5.0,9.0,13.0]|   40| 153.03660961290706|\n",
+      "|[5.0,16.0,21.0]|  320|  202.4181479242902|\n",
+      "| [7.0,7.0,19.0]|   73| 152.75118657753876|\n",
+      "|  [9.0,2.0,4.0]|    6| 13.870387680351655|\n",
+      "|  [9.0,4.0,2.0]|    5|-0.6625183107717021|\n",
+      "|  [9.0,9.0,7.0]|   21|  29.83635623162982|\n",
+      "|[9.0,10.0,14.0]|   80|  76.03481485223608|\n",
+      "| [10.0,5.0,9.0]|   87| 24.760547892546754|\n",
+      "| [10.0,7.0,5.0]|    4| -3.138586002618581|\n",
+      "|[11.0,14.0,8.0]|    5| -7.948009868628219|\n",
+      "| [1.0,11.0,0.0]|   53| 148.09101981870407|\n",
+      "|  [2.0,8.0,9.0]|  260| 189.21367010022726|\n",
+      "|[3.0,11.0,17.0]|  191|  220.1531721684853|\n",
+      "| [3.0,14.0,4.0]|   33| 131.52267366159032|\n",
+      "| [4.0,11.0,8.0]|  138| 139.22975418300854|\n",
+      "|[5.0,10.0,16.0]|   74| 172.50261242542936|\n",
+      "+---------------+-----+-------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find the correlation using Pearson Correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import corr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------------------------------+\n",
+      "|corr(Creation_Month, time_to_resolve_in_hrs)|\n",
+      "+--------------------------------------------+\n",
+      "|                        -0.08010677112024123|\n",
+      "+--------------------------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "nyc_311_df_2019.select(corr('Creation_Month','time_to_resolve_in_hrs')).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------------------------------+\n",
+      "|corr(Creation_Hour, time_to_resolve_in_hrs)|\n",
+      "+-------------------------------------------+\n",
+      "|                       -0.03296325095489546|\n",
+      "+-------------------------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "nyc_311_df_2019.select(corr('Creation_Hour','time_to_resolve_in_hrs')).show()"
    ]
   },
   {
