--- a/Q1_2018_and_2019_Statistical_Analysis.ipynb
+++ b/Q1_2018_and_2019_Statistical_Analysis.ipynb
@@ -516,6 +516,48 @@
     "\n",
     "show_plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_top_boroughs(df):\n",
+    "    '''\n",
+    "    Get the list of boroughs which has the most number of complaints getting\n",
+    "    '''\n",
+    "    boroughs = df.groupBy('Borough').count().filter('count > 5000').select('Borough').distinct().collect()\n",
+    "    top_boroughs = []\n",
+    "    for item in boroughs:\n",
+    "        top_boroughs.append(item[0])\n",
+    "    \n",
+    "    return top_boroughs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_top_boroughs_complaint_wise(df, year):\n",
+    "    '''\n",
+    "    Plot the bar graphs of complaint distribution in top boroughs\n",
+    "    '''\n",
+    "    top_boroughs = get_top_boroughs(df)\n",
+    "    for i in range(len(top_boroughs)):\n",
+    "        nyc_311_df_borough = df.filter(nyc_311_df_2019['Borough'] == top_boroughs[i])\n",
+    "        prepare_plot(nyc_311_df_borough, 'Complaint_Type',\n",
+    "                                    \"Complaint Wise Distribution - \" + top_boroughs[i] + \" - \" + str(year), \"Complaint Types\", \"Count\", str(year)+\"_\"+str(i+1), x_tick_rotation='vertical')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
